--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:700|Abel|Amatica+SC" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.0.js"></script>
     <script src="js/bootstrap.js"></script>
@@ -15,29 +14,53 @@
     <div class='container'>
       <form id='order'>
         <div class='row'>
-          <div class='form-group toppings'>
-            <h6>Choose a topping only $1 extra.. each</h6>
-            <div class="checkbox">
-              <label><input type="checkbox" name="topping" value="extra-cheese">Extra Cheese</label>
+          <div class='col-sm-4'>
+            <div class='form-group size'>
+              <h4>Select your size</h4>
+              <div class="checkbox">
+                <label><input type="checkbox" name="topping" value="large">Large</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="topping" value="Medium">Medium</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="topping" value="Small">Small</label>
+              </div>
             </div>
-            <div class="checkbox">
-              <label><input type="checkbox" name="topping" value="artichoke">Artichoke</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" name="topping" value="anchovy">Anchovy</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" name="topping" value="spinach">Mushroom</label>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox" name="topping" value="spinach">Spinach</label>
+          </div>
+
+          <div class='col-sm-4'>
+            <div class='form-group toppings'>
+              <h6>Choose a topping only $1 extra.. each</h6>
+              <div class="checkbox">
+                <label><input type="checkbox" name="topping" value="extra-cheese">Extra Cheese</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="topping" value="artichoke">Artichoke</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="topping" value="anchovy">Anchovy</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="topping" value="mushroom">Mushroom</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" name="topping" value="spinach">Spinach</label>
+              </div>
             </div>
           </div>
         </div>
       </form>
 
+
+        <div class="col-sm-12">
+          <div id="order">
+          <h2>Order:</h2>
+
+            </div>
+            <button id="submit-order" class="btn btn-success">Submit Order</button>
+        </div>
+
     </div>
-
-
   </body>
 </html>
