fix syntax error in html capital sizes, else statement, and topping

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <label><input type="checkbox" name="size" value="large">Large</label>
               </div>
               <div class="checkbox">
-                <label><input type="checkbox" name="size" value="Medium">Medium</label>
+                <label><input type="checkbox" name="size" value="medium">Medium</label>
               </div>
               <div class="checkbox">
-                <label><input type="checkbox" name="size" value="Small">Small</label>
+                <label><input type="checkbox" name="size" value="small">Small</label>
               </div>
             </div>
           </div>
